--- a/index.html
+++ b/index.html
@@ -341,8 +341,8 @@
     <div id="notificationContainer"></div>
 
     <!-- Scripts -->
-    <script src="data/proyectos.json" type="application/json" id="proyectosData"></script>
-    <script src="data/funcionarios.json" type="application/json" id="funcionariosData"></script>
+    <script src="proyectos.json" type="application/json" id="proyectosData"></script>
+    <script src="funcionarios.json" type="application/json" id="funcionariosData"></script>
     <script src="script.js"></script>
 </body>
 </html>
